force-app/main/default/objects/sf_devops__Test_Suite__c/sf_devops__Test_Suite__c.object-meta.xml
<CustomObject>
    <label>Test Suite</label>
    <nameField>
        <label>Test Suite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Suites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>