force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Definition_in_Test_Provider__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Definition_in_Test_Provider__c</fullName>
    <label>Definition in Test Provider</label>
    <type>Url</type>
</CustomField>