force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Description__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>