force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Enabled__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Enabled__c</fullName>
    <label>Enabled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sf_devops__Status</valueSetName>
    </valueSet>
</CustomField>