force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Last_Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Last_Execution_Time__c</fullName>
    <label>Last Execution Time</label>
    <type>DateTime</type>
</CustomField>