force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Name__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Name__c</fullName>
    <label>Test Suite Full Name</label>
    <type>TextArea</type>
</CustomField>