force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Sync_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Sync_Id__c</fullName>
    <externalId>true</externalId>
    <label>Sync Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>