force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Test_Provider_Specific_Config__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Test_Provider_Specific_Config__c</fullName>
    <label>Test Provider Specific Config</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>