force-app/main/default/objects/sf_devops__Test_Suite__c/fields/sf_devops__Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Unique_Key__c</fullName>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>