force-app/main/default/objects/sf_devops__Test_Suite__c/listViews/sf_devops__All.listView-meta.xml
<ListView>
    <fullName>sf_devops__All</fullName>
    <columns>NAME</columns>
    <columns>sf_devops__Last_Execution_Time__c</columns>
    <columns>sf_devops__Last_Execution_Status__c</columns>
    <columns>sf_devops__Description__c</columns>
    <columns>sf_devops__Status__c</columns>
    <columns>sf_devops__Project__c</columns>
    <columns>sf_devops__Test_Provider__c</columns>
    <columns>sf_devops__Environment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>